--- a/SmartHouseControl/SmartHouseControl/SmartHouseControl.csproj
+++ b/SmartHouseControl/SmartHouseControl/SmartHouseControl.csproj
@@ -72,6 +72,7 @@
     <Content Include="images\divider3.jpg" />
     <Content Include="images\divider4.jpg" />
     <Content Include="images\divider6.jpg" />
+    <Content Include="images\floor plan.png" />
     <Content Include="images\folio01.jpg" />
     <Content Include="images\folio02.jpg" />
     <Content Include="images\folio03.jpg" />
