--- a/SmartHouseControl/SmartHouseControl/SmartHouseControl.csproj
+++ b/SmartHouseControl/SmartHouseControl/SmartHouseControl.csproj
@@ -94,6 +94,7 @@
     <Content Include="images\logo.jpg" />
     <Content Include="images\logo.png" />
     <Content Include="images\OfficeRoom.PNG" />
+    <Content Include="images\SmartHouseControlHeaderImage.jpg" />
     <Content Include="images\SmartHouseLogo.jpg" />
     <Content Include="index.html" />
     <Content Include="scripts\bootstrap.js" />
